# bidappetit

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: database.py  dependencies.py  main.py  seed.py
backend/app/models/: __init__.py  bid.py  booking.py  enums.py  event.py  restaurant.py  user.py
backend/app/routers/: auth.py  bids.py  bookings.py  events.py  restaurants.py
backend/app/schemas/: __init__.py  bid.py  booking.py  event.py  restaurant.py  user.py
frontend/: package-lock.json
todos/: 001-complete-p1-accept-bid-race-condition.md  002-complete-p1-booking-cancellation-leaves-inconsistent-state.md  003-complete-p1-n-plus-one-query-in-list-events.md  004-complete-p1-dual-auth-state-module-variable-vs-react.md  004-pending-p1-dual-auth-state-module-variable-vs-react.md  005-complete-p1-missing-error-handling-on-fetch-calls.md  006-complete-p1-unauthenticated-user-enumeration-endpoint.md  007-complete-p2-status-fields-raw-strings-use-strenum.md  007-pending-p2-status-fields-raw-strings-use-strenum.md  008-complete-p2-cancel-event-does-not-cascade-to-bids.md  009-complete-p2-bid-update-skips-deadline-check.md  010-complete-p2-no-input-validation-on-schemas.md  011-complete-p2-schema-duplication-bidinvent-eventlistresponse.md  012-complete-p2-replace-column-dict-comprehension-with-model-validate.md  013-complete-p2-add-mine-filter-and-server-side-pagination.md  013-pending-p2-add-mine-filter-and-server-side-pagination.md  014-complete-p2-extract-bidfull-bidcard-as-react-components.md  015-complete-p3-add-mypy-ruff-dev-tooling.md  (+3 more)
(+19 files in other folders)
