[project]
name = "bidappetit-backend"
version = "0.1.0"
description = "BidAppetit API - Event Restaurant Marketplace"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = ["ruff>=0.4", "mypy>=1.10", "sqlalchemy[mypy]>=2.0"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
